fix message image cutoff

--- a/src/app/(main)/layout1.css
+++ b/src/app/(main)/layout1.css
@@ -395,7 +395,7 @@ nav {
 .paper-image {
     position: relative;
     left: -5rem;
-    width: calc(var(--width) - 2rem);
+    width: calc(var(--width) - 2.75rem);
     z-index: 10;
     margin-bottom: 1rem;
 
